manifests/operator_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-processing-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-processing-operator
  template:
    metadata:
      labels:
        app: image-processing-operator
    spec:
      serviceAccountName: operator-sa
      containers:
        - name: operator
          image: darwinist/operator:latest
          imagePullPolicy: Always
