manifests/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: console
  namespace: darwinist
  labels:
    app: console
spec:
  clusterIP: 172.30.92.153
  ipFamilies:
    - IPv4
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: console
    component: ui
status:
  loadBalancer: {}
