manifests/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: darwinist-api-server
  namespace: darwinist
  labels:
    app: api-server-service
  annotations:
    haproxy.router.openshift.io/timeout: 5m
spec:
  host: darwinist-api-server.apps.goose.hpc-l.com
  to:
    kind: Service
    name: api-server-service
    weight: 100
  port:
    targetPort: 8080
